完成商店页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.litepal.guolindev:core:3.2.3'
+    implementation 'com.github.xiaoshitounen:NumberOfItem:1.0.2'
+    implementation 'com.github.xiaoshitounen:CircleProgress:1.0.5'
 
 
 
