--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".Activity.LinkActivity" />
         <activity android:name=".Activity.BaseActivity"/>
         <activity android:name=".Activity.SuccessActivity"/>
+        <activity android:name=".Activity.FailureActivity"/>
     </application>
 
 </manifest>
