--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AndroidAPP"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +24,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activity.LevelActivity" />
-        <activity android:name=".Activity.LinkActivity" />
-        <activity android:name=".Activity.BaseActivity"/>
-        <activity android:name=".Activity.SuccessActivity"/>
-        <activity android:name=".Activity.FailureActivity"/>
+        <activity android:name=".activity.LevelActivity" />
+        <activity android:name=".activity.LinkActivity" />
+        <activity android:name=".activity.BaseActivity"/>
+        <activity android:name=".activity.SuccessActivity"/>
+        <activity android:name=".activity.FailureActivity"/>
     </application>
 
 </manifest>
