--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +25,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.LevelActivity" />
-        <activity android:name=".activity.LinkActivity" />
-        <activity android:name=".activity.BaseActivity"/>
-        <activity android:name=".activity.SuccessActivity"/>
-        <activity android:name=".activity.FailureActivity"/>
+        <activity android:name=".activity.LevelActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.LinkActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.BaseActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.SuccessActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.FailureActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
